objects/Gen3__c.object
<CustomObject>
    <fields>
        <fullName>CatchUp__c</fullName>
        <label>CatchUp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeactivateOnlyR2__c</fullName>
        <formula>IF(R1__c=R3__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeactivateOnlyR2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phase1</fullName>
                </value>
                <value>
                    <fullName>Phase2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R1ID__c</fullName>
        <label>R1ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R1LookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>R1LookUp</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gen2-3Migration (R1LookUp)</relationshipLabel>
        <relationshipName>Gen2_3Migration1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R1Lookup_Reprocess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For mapping description</description>
        <label>R1Lookup_Reprocess</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gen2-3Migration</relationshipLabel>
        <relationshipName>Gen2_3Migration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R1QBOWID__c</fullName>
        <label>R1QBOWID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R1__c</fullName>
        <label>R1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R2ID__c</fullName>
        <label>R2ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R2LookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>R2LookUp</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gen2-3Migration (R2LookUp)</relationshipLabel>
        <relationshipName>Gen2_3Migration2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R2QBOWID__c</fullName>
        <label>R2QBOWID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R2__c</fullName>
        <label>R2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R3AccountOwner__c</fullName>
        <formula>R3LookUp__r.Owner.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R3AccountOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R3ID__c</fullName>
        <label>R3ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R3LookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>R3LookUp</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gen2-3Migration (R3LookUp)</relationshipLabel>
        <relationshipName>Gen2_3Migration3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R3QBOWID__c</fullName>
        <label>R3QBOWID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R3__c</fullName>
        <label>R3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RP1ID__c</fullName>
        <label>RP1ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RP2ID__c</fullName>
        <label>RP2ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RP3ID__c</fullName>
        <label>RP3ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RanBillingCodeJob__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RanBillingCodeJob?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Processed__c</columns>
        <columns>R1__c</columns>
        <columns>R2__c</columns>
        <columns>R3__c</columns>
        <columns>R1ID__c</columns>
        <columns>R2ID__c</columns>
        <columns>R3ID__c</columns>
        <columns>R1QBOWID__c</columns>
        <columns>R2QBOWID__c</columns>
        <columns>R3QBOWID__c</columns>
        <columns>RP1ID__c</columns>
        <columns>RP2ID__c</columns>
        <columns>RP3ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>